test/semantics/programs/valid/bool-if-condition.guav
# Should analyze fine since the conditional exp's for the if statements are ultimately type boolean

if (false) {
    print("nope")
} else {
    if (5 < 3) {
        print("still nope")
    } else {
        print("you bet")
    }
}
