test/semantics/programs/invalid/nonbool-if-condition.guav
# Should fail since exp not type bool

if ("cat") {
    print("nope")
}
